--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "productiwise-ai-assistant",
+  "name": "productiwise-mobile-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
